apps/trilium/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trilium
  labels:
    app.kubernetes.io/name: trilium
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: trilium
  template:
    metadata:
      labels:
        app.kubernetes.io/name: trilium
    spec:
      nodeSelector:
        kubernetes.io/hostname: helium
      containers:
        - name: trilium
          image: zadam/trilium:latest
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /home/node/trilium-data
          livenessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: http
            periodSeconds: 10
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: trilium-data
