apps/trilium/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium
  labels:
    app.kubernetes.io/name: trilium
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/name: trilium
