apps/trilium/resources/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: trilium
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Trilium
    gethomepage.dev/description: Knowledge Base & Notes
    gethomepage.dev/group: Applications
    gethomepage.dev/icon: trilium
    gethomepage.dev/href: https://trilium.cyphers.app
spec:
  entryPoints: [websecure]
  routes:
    - kind: Rule
      match: Host(`trilium.cyphers.app`)
      middlewares:
        - name: authentik-auth
          namespace: authentik
        - name: default-headers
          namespace: traefik
      services:
        - name: trilium
          namespace: trilium
          port: 8080
  tls:
    secretName: production-cyphers-app-tls
